data-app/main/default/objects/Adoption_Event_Volunteer_00DDa000001__dlm/Adoption_Event_Volunteer_00DDa000001__dlm.object-meta.xml
<CustomObject>
    <label>Adoption_Event_Volunteer_00DDa000001Wc5U</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>