data-app/main/default/objects/Adoption_Event_Volunteer_00DDa000001__dlm/fields/LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedById__c</fullName>
    <label>Last Modified By ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>